fixed alignment of stats (right align into left align - see dt and dd)

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ main {
     color: white;
     font-size: 1rem;
     border: 1px solid green;
+    width: 600px;
 }
 #timer-stats p {
     padding: 0.1rem;
@@ -105,17 +106,24 @@ main {
     font-weight: semibold;
 }
 
-.stat-labels {
-    text-align: right;
-    width: 50%;    
-}
 .stat-texts {
+
+}
+
+#timer-stats dd {
+    float: right;
     text-align: left;
     width: 50%;
+    border: 1px solid red;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 #timer-stats dt {
-    display: block; 
-    text-align: right;
     float: left;
+    text-align: right;
+    width: 50%;
+    border: 1px solid blueviolet;
+    box-sizing: border-box;
 }
